[package]
name = "etat"
version = "0.1.3"
authors = ["Wadii Hajji <wadii@cardiologs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
cmd_lib = "0.12.0"
battery = "0.7.8"
mpris = "1.1.2"
